<resources>
    <string name="module_feature_app">App</string>

    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_contact_number">Contact Number</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="hint_password">Password</string>
    <string name="hint_email">Email</string>
    <string name="hint_address">Address</string>
    <string name="hint_current_password">Current Paswword</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_reminders">Reminders</string>
    <string name="title_about_bse">About BSE</string>
    <string name="title_bse_techniques">BSE Techniques</string>
    <string name="title_other_breast_cancer_facts">Other Breast Cancer Facts</string>
    <string name="title_cervical_cancer_preventive_facts">Cervical Cancer Preventive Facts</string>
    <string name="title_oci_president_message">OCI President Message</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_terms_and_conditions">Terms and Conditions</string>
    <string name="title_chat">Chat</string>
    <string name="title_contact_us">Contact Us</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_log_out">Log Out</string>
    <string name="title_wtd">What To Do If Anything Is Found</string>
    <string name="title_change_password">Change Password</string>


    <string name="action_title_save">Save</string>
    <string name="action_title_change_password">Change Password</string>
    <string name="action_title_cancel">Cancel</string>
    <string name="action_title_logout">Logout</string>
    <string name="action_title_send">Send</string>
    <string name="action_ok">Ok</string>


    <string name="label_welcome">Welcome to breast self-examination</string>


    <string name="dis_welcome">Make BSE a part of your monthly routine to be healthy as well as to prevent breast cancer.</string>
    <string name="msg_first_name_required">Please provide your first name</string>
    <string name="msg_logout_confirm">Are you sure you want to logout?</string>
    <string name="msg_success">Success</string>
    <string name="label_your_msg">Your Message</string>
    <string name="label_type_here">Type here</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
