<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home"/>
        <item
            android:id="@+id/nav_my_profile"
            android:title="@string/title_my_profile"/>
        <item
            android:id="@+id/nav_chat"
            android:title="@string/title_chat"/>
        <item
            android:id="@+id/nav_user_list"
            android:title="User List"
            />
        <item
            android:id="@+id/nav_contact_us"
            android:title="@string/title_contact_us"/>
        <item
            android:id="@+id/nav_notifications"
            android:title="@string/title_notifications" />
        <item
            android:id="@+id/nav_logout"
            android:title="@string/title_log_out"/>
    </group>

</menu>
