<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_sign_in_base"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/linearLayout_padding_contact_us"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/tv_title_first_name"
                        style="@style/editTextTitleLabelStyle.size16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tv_title_first_name_margin_top"
                        android:text="@string/hint_first_name" />

                    <EditText
                        android:id="@+id/et_first_name"
                        style="@style/editTextWithHintSquareCornerStyle.size15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/et_first_name_margin_top"
                        android:hint="@string/hint_first_name"
                        android:inputType="textCapSentences" />

                    <TextView
                        android:id="@+id/tv_title_last_name"
                        style="@style/editTextTitleLabelStyle.size16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tv_title_last_name_margin_top"
                        android:text="@string/hint_last_name" />

                    <EditText
                        android:id="@+id/et_last_name"
                        style="@style/editTextWithHintSquareCornerStyle.size15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/et_last_name_margin_top"
                        android:hint="@string/hint_last_name"
                        android:inputType="textCapSentences" />

                    <TextView
                        android:id="@+id/tv_title_email"
                        style="@style/editTextTitleLabelStyle.size16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tv_title_email_margin_top"
                        android:text="@string/hint_email" />

                    <EditText
                        android:id="@+id/et_email"
                        style="@style/editTextWithHintSquareCornerStyle.size15"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/et_email_margin_top"
                        android:hint="@string/hint_email"
                        android:inputType="textEmailAddress" />

                    <TextView
                        android:id="@+id/tv_your_msg"
                        style="@style/editTextTitleLabelStyle.size16"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/tv_your_msg_margin_top"
                        android:text="@string/label_your_msg" />

                    <EditText
                        android:id="@+id/et_message"
                        style="@style/editTextWithHintSquareCornerStyle.size15"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/et_message_height"
                        android:layout_marginTop="@dimen/et_message_margin_top"
                        android:gravity="start"
                        android:hint="@string/label_type_here"
                        android:inputType="text" />

                    <Button
                        android:id="@+id/btn_send"
                        style="@style/roundedSolidColorButtonStyle.size20"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/btn_save_margin_top"
                        android:text="@string/action_title_send" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>