<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/linearLayout_margin_top"
            android:orientation="vertical"
            android:padding="@dimen/linearLayout_padding_change_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_current_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextTitleLabelStyle.size16"
                android:layout_marginTop="@dimen/linearLayout_margin_top"
                android:text="@string/hint_current_password" />

            <EditText
                android:id="@+id/et_current_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_current_password_margin_top"
                style="@style/editTextWithHintRoundCornerStyle.size15"
                android:hint="@string/hint_current_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_new_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextTitleLabelStyle.size16"
                android:layout_marginTop="@dimen/tv_new_password_margin_top"
                android:text="@string/hint_password" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_current_password_margin_top"
                style="@style/editTextWithHintRoundCornerStyle.size15"
                android:hint="@string/hint_password"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/editTextTitleLabelStyle.size16"
                android:layout_marginTop="@dimen/tv_confirm_password_margin_top"
                android:text="@string/hint_confirm_password" />

            <EditText
                android:id="@+id/et_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/et_current_password_margin_top"
                style="@style/editTextWithHintRoundCornerStyle.size15"
                android:hint="@string/hint_confirm_password"
                android:inputType="textPassword" />

            <Button
                style="@style/roundedSolidColorButtonStyle.size20"
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/btn_save_margin_top"
                android:text="@string/action_title_save" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>